[package]
name = "calc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
prost = "0.11.6"
tokio = "1.24.1"
tonic = "0.8.3"
